# SuperGee

./: .gitignore  README.md  build.sh
resources/: superg.gresource.xml  window.ui
src/: BeetService.vala  Entry.vala  EntryHandler.vala  IBeetService.vala  IEntryHandler.vala  ISearchHandler.vala  Main.vala  SearchHandler.vala  meson.build
